--- a/Buildspec.yml
+++ b/Buildspec.yml
@@ -3,8 +3,13 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      python: 3.7
+      python: 3.9
 
   pre_build:
     commands:
       - pip install -r requirements.txt
+
+  post_build:
+    commands:
+      - python manage.py makemigrations
+      - python manage.py migrate
